k8s/manifests/ingresses/todo.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-ingress
  namespace: todo
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: todo-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api-svc
                port:
                  number: 80
